# KICKAI

./: .claude_token_strategy.md  .clauderc  .cursorignore  .env.backup.20250703_222854  .env.example  .env.test  .flake8  .github_link  .gitignore  .pre-commit-config.yaml  .python-version-strict  ADDPLAYER_COMMAND_FIXES.md  ADVANCED_MEMORY_COMPLETION_SUMMARY.md  AGENTIC_IMPLEMENTATION_SUMMARY.md  AGENTIC_MESSAGE_ROUTER_ROBUSTNESS_ANALYSIS.md  AGENTS_CLEANUP_SUMMARY.md  AGENT_ARCHITECTURE_REVIEW.md  AGENT_AUDIT_REPORT.md  AGENT_BASED_MESSAGE_PROCESSING_ANALYSIS.md  AGENT_ROUTING_FIX.md  AGENT_TOOL_ANALYSIS.md  AGENT_TOOL_TYPE_FIX.md  AGENT_UNIFICATION_SUMMARY.md  ARCHITECTURE_ASSESSMENT_REPORT.md  BOT_CONFIGURATION_GUIDE.md  BRANCHING_STRATEGY.md  CHANGELOG.TXT  CHANGELOG.txt  CIRCULAR_IMPORT_FIX_SUMMARY.md  CI_CD_CONFIGURATION_GUIDE.md  CI_CD_STATUS_SUMMARY.md  CLAUDE.md  CLEAN_ARCHITECTURE_REFACTORING_PLAN.md  CLEAN_ARCHITECTURE_VIOLATIONS_REPORT.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_INDEX.md  CODEBASE_INDEX_COMPREHENSIVE.md  CODEBASE_STRUCTURE.md  CODE_HYGIENE.md  COLLECTIV_PAYMENT_SYSTEM_PRD.md  (+418 more)
.cursor/rules/: 00-global.md  00_project_overview.md  01_architecture.md  02_agentic_design.md  03_technology_stack.md  04-async-design-patterns.md  04_development_standards.md  04_testing_and_quality.md  05_directory_structure.md  05_testing_and_quality.md  06_documentation.md  06_error_handling.md  07_access_control.md  07_workflow_and_deployment.md  08_command_system.md  08_service_interfaces.md  09_access_control.md  09_configuration.md  10-python.md  10_configuration_system.md  11_service_discovery.md  (+16 more)
CLAUDEMD/: README.md  agentic-design.md  crewai-tool-guidelines.md  database.md  development-patterns.md  environment-setup.md  mock-testing.md  sdlc.md  telegram-integration.md  tool-update-summary.md
backup_ollama_infrastructure/: ollama_client.py  ollama_factory.py
config/: README.md  bot_config.example.json  bot_config.json  bot_config.production.json  bot_config.staging.json  bot_config.testing.json
docs/: ADDPLAYER_COMMAND_SPECIFICATION_UPDATE.md  ADDPLAYER_ENTITY_ROUTING_FINAL_FIX.md  ADDPLAYER_ENTITY_ROUTING_FIX_SUMMARY.md  ADDPLAYER_ID_GENERATION_FIX.md  AGENTIC_IMPROVEMENTS.md  AGENTIC_MESSAGE_ROUTER_AUDIT.md  AGENTIC_REFACTOR_SUMMARY.md  AGENT_FIRST_ANTI_HALLUCINATION_STRATEGY.md  AGENT_LLM_MODEL_SPECIFICATION.md  ANY_FROM_DICT_AUDIT_REPORT.md  API_AUTHENTICATION_TROUBLESHOOTING.md  ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURE.md  ARCHITECTURE_ENHANCED.md  ASYNC_OPERATIONS_REFACTORING.md  ASYNC_SYNC_PATTERN_AUDIT_REPORT.md  AUDIT_SCRIPTS_FIXES_SUMMARY.md  BEHAVIORAL_MIXINS.md  BOT_CONFIGURATION_CLEANUP.md  BOT_MANAGEMENT_SYSTEM_IMPROVEMENTS.md  BOT_MANAGER_TELEGRAM_API_TEST_SPECIFICATION.md  BOT_STARTUP_RULES.md  BOT_STARTUP_SCRIPT_FIX.md  BOT_TESTING_RESULTS.md  CACHING_STRATEGY_SPECIFICATION.md  CENTRALIZED_PERMISSION_SYSTEM.md  CIRCULAR_DEPENDENCY_FIX.md  CODEBASE_INDEX.md  CODEBASE_INDEX_COMPREHENSIVE.md  CODEBASE_VALIDATION_REPORT.md  CODE_COMPLEXITY_IMPROVEMENTS.md  CODE_HYGIENE.md  CODING_STANDARDS.md  COLLECTION_NAMING_AUDIT_REPORT.md  COLLECTION_NAMING_FIXES_IMPLEMENTATION_SUMMARY.md  COMMAND_CHAT_DIFFERENCES.md  COMMAND_PERMISSION_REVIEW.md  COMMAND_REGISTRY_INITIALIZATION_FIX.md  COMMAND_REGISTRY_UPDATE.md  COMMAND_SPECIFICATIONS.md  (+160 more)
examples/: factory_pattern_usage.py  json_tool_example.py  phone_validator_demo.py  service_interfaces_example.py
kickai/: __init__.py  tasks.py
reports/: firestore_test_report_20241219.md  player_registration_test_report_20241219.md  shared_module_test_report_20250803_215210.md  shared_module_test_report_20250803_215301.md
scripts/: PLAYER_STATUS_NORMALIZATION.md  README.md  add_leadership_admins.py  add_leadership_admins_standalone.py  audit_config.py  audit_crewai_tool_patterns.py  audit_docstrings.py  audit_imports.py  audit_json_tool_outputs.py  audit_remaining_context_patterns.py  audit_tool_parameter_passing.py  audit_tools_and_args.py  bootstrap_team.py  cleanup_and_standardize_firestore.py  cleanup_invalid_players.py  cleanup_ollama_infrastructure.py  cleanup_unknown_members.py  cleanup_unused_tools.py  comprehensive_tool_audit.py  config.py  crewai_parameter_audit_final_report.py  deploy-production.sh  deploy-staging.sh  deploy-testing.sh  deploy.sh  deploy_with_firebase.py  diagnose_llm_response_issue.py  diagnose_validation_failures.py  find_chat_ids.py  get_bot_token.py  health_check.py  kill_bot_processes.sh  lint.sh  list_bot_configs.py  manage_bot_config.py  manage_team_members.py  manage_team_members_standalone.py  manual_tool_inventory.py  migrate_bot_configuration.py  migrate_collection_naming.py  (+54 more)
scripts-oneoff/: README.md  audit_crewai_native_patterns.py  compare_bot_environment.py  compare_firestore_connections.py  configure_team_mappings.py  final_firestore_investigation.py  manage_team_members.py  migrate_configuration.py  print_teams_collection.py  run_health_checks.py  validate_agent_prompts.py  validate_firestore_data.py
setup/: README.md
specs/: match_management_specification.md  payment_management_specification.md  player_management_specification.md  training_management_specification.md
src/: __init__.py  advanced_memory.py  agent_capabilities.py  agents.py  enums.py  improved_agentic_system.py  intelligent_router.py  intelligent_router_standalone.py  main.py  multi_team_manager.py  player_registration.py  simple_agentic_handler.py  tasks.py  telegram_command_handler.py
test_reports/: FIRESTORE_CLEANUP_AND_TESTING_SUMMARY.md
tests/: README.md  README_PLAYWRIGHT_MCP.md  conftest.py  firestore_comprehensive_test_suite.py  playwright_mcp_server.py  playwright_mock_telegram_mcp.py  playwright_telegram_mcp.py  puppeteer_command_tests.py  run_phase1_tests.py  test_advanced_memory.py  test_advanced_memory_integration.py  test_agent_capabilities.py  test_dynamic_task_decomposition.py  test_dynamic_task_integration.py  test_intelligent_router.py  test_onboarding_integration.py  test_phase1_integration.py  test_player_registration.py  test_standalone_intelligent_router.py
venv311/: pyvenv.cfg
(+1049 files in other folders)
